Fix deprecated use of new Integer/Double etc in Code Generation #227 (#248)
After testing I found the real source where the Spinners Model is
created, so this is the real fix for the issue